Make save button in task editor sticky on small screens. Fixed #32

--- a/app/styles/module/_todo-list.scss
+++ b/app/styles/module/_todo-list.scss
@@ -24,6 +24,8 @@
 	position: fixed;
 	bottom: 0; left: 0; right: 0;
 
+	.edit-mode & { display: none !important; }
+
 	.sidebar-open & {
 		left: $sidebar-width;
 		@include breakpoint(desktop) { left: $sidebar-width-big; }
